--- a/views/movies/show.ejs
+++ b/views/movies/show.ejs
@@ -61,6 +61,7 @@
               <th>Date</th>
               <th>Review</th>
               <th>Rating</th>
+              <th></th>
             </tr>
           </thead>
           <tbody>
@@ -68,7 +69,7 @@
               <% movie.reviews.forEach(function(r) { %>
                 <% total +=r.rating %>
                   <tr>
-                    <td class="review-user"><img alt="avatar" src="<%= r.userAvatar %> referrerpolicy=" no-referrer""">
+                    <td class="review-user"><img alt="avatar" src="<%= r.userAvatar %> referrerpolicy=" no-referrer"">
                       <%= r.userName %>
                     </td>
                     <td>
@@ -79,6 +80,13 @@
                     </td>
                     <td>
                       <%= r.rating %>
+                    </td>
+                    <td>
+                      <% if (user && user._id.equals(r.user)) { %>
+                        <form action="/reviews/<%= r.id %>?_method=DELETE" method="POST">
+                          <button type="submit">X</button>
+                        </form>
+                        <% } %>
                     </td>
                   </tr>
                   <% }); %>
